some minor changes

--- a/report.html
+++ b/report.html
@@ -73,9 +73,9 @@
       <div class="client-logo" style="padding:15px"></div>
       <div class="bg-primary" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <h3>Summary</h3><br>
-        <p class="lead">Start Time: Thu Nov 03 2022 12:41:58 GMT-0300 (Argentina Standard Time)</p>
+        <p class="lead">Start Time: Mon Nov 14 2022 16:33:12 GMT-0300 (Argentina Standard Time)</p>
         <p class="lead">Browsers: Chrome 107.0.0.0 / Ventura 13</p>
-        <p class="lead">Duration: 55s</p>
+        <p class="lead">Duration: 1m 03s</p>
         <p class="lead">Tests Failed: 0 out of 3</p>
         <p class="lead">Tests Skipped: 0</p>
       </div><br>
@@ -96,7 +96,7 @@
   <td>Registration Fixture</td>
   <td>Assert Home Page Test</td>
   <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>24s</td>
+  <td>7s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
@@ -104,7 +104,7 @@
   <td>Registration Fixture</td>
   <td>User Registration and Login Test</td>
   <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>16s</td>
+  <td>29s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
@@ -112,7 +112,7 @@
   <td>Registration Fixture</td>
   <td>User Registration and Login Test</td>
   <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>15s</td>
+  <td>27s</td>
   <td>passed</td>
  </tr>
 
