--- a/report.html
+++ b/report.html
@@ -73,10 +73,10 @@
       <div class="client-logo" style="padding:15px"></div>
       <div class="bg-primary" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <h3>Summary</h3><br>
-        <p class="lead">Start Time: Mon Nov 14 2022 16:33:12 GMT-0300 (Argentina Standard Time)</p>
-        <p class="lead">Browsers: Chrome 107.0.0.0 / Ventura 13</p>
-        <p class="lead">Duration: 1m 03s</p>
-        <p class="lead">Tests Failed: 0 out of 3</p>
+        <p class="lead">Start Time: Thu Dec 15 2022 23:54:38 GMT-0300 (Argentina Standard Time)</p>
+        <p class="lead">Browsers: Chrome 108.0.0.0 / Ventura 13</p>
+        <p class="lead">Duration: 50s</p>
+        <p class="lead">Tests Failed: 0 out of 4</p>
         <p class="lead">Tests Skipped: 0</p>
       </div><br>
       <table class="table sortable" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
@@ -95,24 +95,32 @@
   <td>1</td>
   <td>Registration Fixture</td>
   <td>Assert Home Page Test</td>
-  <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>7s</td>
+  <td>Chrome 108.0.0.0 / Ventura 13</td>
+  <td>3s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>2</td>
   <td>Registration Fixture</td>
-  <td>User Registration and Login Test</td>
-  <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>29s</td>
+  <td>User -James- Registration and Login Test</td>
+  <td>Chrome 108.0.0.0 / Ventura 13</td>
+  <td>17s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>3</td>
   <td>Registration Fixture</td>
-  <td>User Registration and Login Test</td>
-  <td>Chrome 107.0.0.0 / Ventura 13</td>
-  <td>27s</td>
+  <td>User -Brad- Registration and Login Test</td>
+  <td>Chrome 108.0.0.0 / Ventura 13</td>
+  <td>15s</td>
+  <td>passed</td>
+ </tr>
+ <tr class="success">
+  <td>4</td>
+  <td>Registration Fixture</td>
+  <td>User -Fran- Registration and Login Test</td>
+  <td>Chrome 108.0.0.0 / Ventura 13</td>
+  <td>15s</td>
   <td>passed</td>
  </tr>
 
